[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/game.gd" type="Script" id=1]
[ext_resource path="res://Art/Tile_set.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Text.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player1.gd" type="Script" id=4]
[ext_resource path="res://Art/Player1_Sprite.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Player2.gd" type="Script" id=6]
[ext_resource path="res://Art/Player2_Sprite.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Container.gd" type="Script" id=8]
[ext_resource path="res://Art/Cup.png" type="Texture" id=9]
[ext_resource path="res://Art/Cake.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Area.gd" type="Script" id=11]
[ext_resource path="res://Art/Ui/Buttons/Reset_Button.png" type="Texture" id=12]
[ext_resource path="res://Art/Ui/Buttons/Reset_Button_Pressed.png" type="Texture" id=13]
[ext_resource path="res://Art/Ui/Buttons/Reset_Button_Hover.png" type="Texture" id=14]
[ext_resource path="res://Art/Ui/PopUp Background.png" type="Texture" id=15]
[ext_resource path="res://Art/Ui/Buttons/Right_arrow.png" type="Texture" id=16]
[ext_resource path="res://Art/Ui/Buttons/Right_arrow-pressed.png" type="Texture" id=17]
[ext_resource path="res://Art/Ui/Buttons/Right_arrow-hover.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 41.5699, 80 )

[sub_resource type="NavigationPolygon" id=2]

vertices = PoolVector2Array( 729.6, -294.4, 729.6, 281.6, -550.4, 281.6, -550.4, -294.4 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -550.4, -294.4, -550.4, 281.6, 729.6, 281.6, 729.6, -294.4 ) ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 22.8533, 6.14148 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 24.7778, 7.11682 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 26.6091, 10 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 13.4686, 34.1123 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 13.2793, 36.0589 )

[sub_resource type="RectangleShape2D" id=8]

custom_solver_bias = 0.0
extents = Vector2( 13.5758, 37.6162 )

[node name="1-0" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="." index="0"]

position = Vector2( 9.8219, 52.7927 )
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = true
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 8, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 65551, 4, 0, 65552, 4, 0, 65553, 4, 0, 65554, 0, 0, 65555, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 131088, 4, 0, 131089, 4, 0, 131090, 0, 0, 131091, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 0, 0, 196627, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 9, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 0, 0, 262163, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 4, 0, 327694, 4, 0, 327695, 4, 0, 327696, 4, 0, 327697, 4, 0, 327698, 0, 0, 327699, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 4, 0, 393225, 4, 0, 393226, 4, 0, 393227, 4, 0, 393228, 4, 0, 393229, 4, 0, 393230, 4, 0, 393231, 4, 0, 393232, 4, 0, 393233, 4, 0, 393234, 0, 0, 393235, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 4, 0, 458761, 4, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 4, 0, 458767, 4, 0, 458768, 4, 0, 458769, 4, 0, 458770, 0, 0, 458771, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 2, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 0, 0, 524307, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0 )
_sections_unfolded = [ "Cell", "Collision" ]

[node name="Player1_Value" type="RichTextLabel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 307.0
margin_right = 103.0
margin_bottom = 531.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 3 )

[node name="Player2_Value" type="RichTextLabel" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 307.0
margin_right = 103.0
margin_bottom = 531.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = ""
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
script = ExtResource( 3 )

[node name="Player1" type="RigidBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 151.257, 209.609 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
Player_speed = 200

[node name="Player1_Sprite" type="Sprite" parent="Player1" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="CollisionShapePlayer1" type="CollisionShape2D" parent="Player1" index="1"]

scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Player2" type="RigidBody2D" parent="." index="4"]

position = Vector2( 146.447, 407.91 )
input_pickable = false
collision_layer = 1
collision_mask = 1
mode = 2
mass = 1.02041e-05
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]
Player_speed = 200
Player_jump_height = 200

[node name="Player2_Sprite" type="Sprite" parent="Player2" index="0"]

scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShapePlayer2" type="CollisionShape2D" parent="Player2" index="1"]

position = Vector2( -0.884003, -0.647827 )
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Coffee_Dis" type="KinematicBody2D" parent="." index="5"]

editor/display_folded = true
visible = false
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08

[node name="NavPoly_Dis" type="NavigationPolygonInstance" parent="Coffee_Dis" index="0"]

position = Vector2( 406.381, 302.023 )
navpoly = SubResource( 2 )
enabled = true

[node name="Coffee_Con_Left" type="Node2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 432.554, 274.539 )
script = ExtResource( 8 )

[node name="Coffee_Sprite" type="Sprite" parent="Coffee_Con_Left" index="0"]

visible = false
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 9 )

[node name="Cake_Sprite" type="Sprite" parent="Coffee_Con_Left" index="1"]

visible = false
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 10 )

[node name="Coffee_Con_Middle" type="Node2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 484.13, 273.703 )
script = ExtResource( 8 )

[node name="Coffee_Sprite" type="Sprite" parent="Coffee_Con_Middle" index="0"]

visible = false
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 9 )

[node name="Cake_Sprite" type="Sprite" parent="Coffee_Con_Middle" index="1"]

visible = false
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 10 )

[node name="Coffee_Con_Right" type="Node2D" parent="." index="8"]

editor/display_folded = true
position = Vector2( 533.524, 273.959 )
script = ExtResource( 8 )

[node name="Coffee_Sprite" type="Sprite" parent="Coffee_Con_Right" index="0"]

visible = false
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 9 )

[node name="Cake_Sprite" type="Sprite" parent="Coffee_Con_Right" index="1"]

visible = false
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 10 )

[node name="Tween" type="Tween" parent="." index="9"]

editor/display_folded = true
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Coffee" type="Sprite" parent="Tween" index="0"]

position = Vector2( 433.96, 476.663 )
scale = Vector2( 0.45, 0.5 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="Bottom_Left" type="Area2D" parent="." index="10"]

position = Vector2( 434.271, 429.193 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom_Left" index="0"]

shape = SubResource( 3 )

[node name="Bottom_Right" type="Area2D" parent="." index="11"]

editor/display_folded = true
position = Vector2( 531.746, 427.57 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom_Right" index="0"]

shape = SubResource( 4 )

[node name="Under_Left" type="Area2D" parent="." index="12"]

editor/display_folded = true
position = Vector2( 433.2, 326.705 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Under_Left" index="0"]

shape = SubResource( 5 )

[node name="Top_Left" type="Area2D" parent="." index="13"]

editor/display_folded = true
position = Vector2( 431.538, 214.523 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Left" index="0"]

shape = SubResource( 6 )

[node name="Top_Middle" type="Area2D" parent="." index="14"]

editor/display_folded = true
position = Vector2( 487.909, 210.984 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Middle" index="0"]

shape = SubResource( 7 )

[node name="Top_Right" type="Area2D" parent="." index="15"]

editor/display_folded = true
position = Vector2( 534.91, 208.19 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_Right" index="0"]

shape = SubResource( 8 )

[node name="Reset" type="TextureButton" parent="." index="16"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 925.0
margin_top = 126.0
margin_right = 1191.0
margin_bottom = 391.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )
_sections_unfolded = [ "Rect" ]

[node name="Info" type="Panel" parent="." index="17"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 291.0
margin_top = 152.0
margin_right = 739.0
margin_bottom = 451.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect" ]

[node name="Background" type="TextureRect" parent="Info" index="0"]

modulate = Color( 1, 1, 1, 0.563529 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -282.0
margin_top = -99.0
margin_right = 1053.0
margin_bottom = 565.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 15 )
stretch_mode = 2
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="TextureFrame" type="TextureRect" parent="Info" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 600.0
margin_bottom = 399.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 15 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="RichTextLabel" type="RichTextLabel" parent="Info" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 97.0
margin_top = 64.0
margin_right = 355.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "Addy needs to move once cup of coffee
from the preperation area to Val at the 
counter."
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Addy needs to move once cup of coffee
from the preperation area to Val at the 
counter."
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="End" type="Panel" parent="." index="18"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 291.0
margin_top = 152.0
margin_right = 739.0
margin_bottom = 451.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect" ]

[node name="Background" type="TextureRect" parent="End" index="0"]

modulate = Color( 1, 1, 1, 0.563529 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -282.0
margin_top = -99.0
margin_right = 1053.0
margin_bottom = 565.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 15 )
stretch_mode = 2
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="TextureFrame" type="TextureRect" parent="End" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -1.0
margin_right = 600.0
margin_bottom = 399.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 15 )
stretch_mode = 2
_sections_unfolded = [ "Rect" ]

[node name="RichTextLabel" type="RichTextLabel" parent="End" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 181.0
margin_top = 100.0
margin_right = 265.0
margin_bottom = 124.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = "WELL DONE!!"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "WELL DONE!!"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode" ]

[node name="Play" type="TextureButton" parent="." index="19"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 477.0
margin_top = 363.0
margin_right = 750.0
margin_bottom = 621.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Next" type="TextureButton" parent="." index="20"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 477.0
margin_top = 363.0
margin_right = 750.0
margin_bottom = 621.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Prep" type="Label" parent="." index="21"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 927.0
margin_top = 471.0
margin_right = 956.0
margin_bottom = 485.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Prep"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Counter" type="Label" parent="." index="22"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 922.0
margin_top = 269.0
margin_right = 972.0
margin_bottom = 283.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Counter"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Table" type="Label" parent="." index="23"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 930.0
margin_top = 69.0
margin_right = 964.0
margin_bottom = 83.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Table"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


